# drax-docs

./: 404.html  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml  todo-done.txt
benetel650-install/: index.html
benetel650-install/PTPInstall/: index.html
core-install/: index.html
css/: atcmds.txt
docs/: index.md  kubernetes-install.md  publish.md  todo-done.txt
docs/2024.1.0_files/: index.md
docs/Troubleshooting/: index.md
docs/automated-install/: install.sh
docs/benetel650-install/: PTPInstall.md  README.md  index.md
docs/core-install/: index.md  open5gs_install_script_from_apt.sh
docs/css/: extra.css
docs/cu_ng-install/: index.md
docs/cw_ng-install/: index.md
docs/drax-install/: index.md
docs/drax_ng-install/: index.md
docs/du-install/: index.md
docs/effnet-benetel-prep/: index.md
docs/extra-info/: index.md
docs/install-guide/: index.md
docs/internal-install-guide/: index.md
docs/kubernetes-install/: index.md
docs/kubernetes-install-1-24/: index.md
docs/kubernetes_ng-install/: index.md
docs/machine-prep/: index.md
docs/op-guide/: Appendix B  appendix A  index.md
docs/srsran-benetel-prep/: index.md
drax-install/: index.html
du-install/: index.html
kubernetes-install/: index.html
kubernetes-install-1-24/: index.html
publish/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/benetel650-install/: index.html
site/core-install/: index.html
site/drax-install/: index.html
site/du-install/: index.html
site/kubernetes-install-1-24/: index.html
(+51 files in other folders)
