[tool.poetry]
name = "drax-docs"
version = "0.1.0"
description = ""
authors = ["Ben Fox-Moore <ben.foxmoore@accelleran.com"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.1.8"
mike = "^1.0.1"
mkdocs-enumerate-headings-plugin = "^0.4.4"
mkdocs-section-index = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
